# CS200Final

./: CMakeLists.txt  README.md
final project/: DataCleaner.cpp  DataCleaner.h  Makefile  Regression.cpp  main.cpp
src/: DataCleaner.cpp  DataCleaner.h  Regression.cpp  Regression.h  main.cpp
